@@ -1,3 +1,10 @@
+2005-10-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-let-maybe): Add `edebug-form-spec' property.
+	(tramp-handle-expand-file-name): Bind `default-directory' locally
+	to "/" in order to avoid problems with UNC shares or Cygwin
+	mounts.
+
 2005-10-17  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-completion-mode): New defvar.  Used in
